--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,12 @@
 	<body>
 		h1>Exceptional</h1>
 		<h2>Realty Group</h2>
-		<a href="index.html">About</a>	<a href="new-properties.html"New Properties></a>	<a href="real-estate-listings.html">Listings</a>	<a href="market-report.html">Market Report</a>	<a href="contact.html">Contact</a>
+		<a href="index.html">About</a>	<a href="new-properties.html">New Properties</a>	<a href="real-estate-listings.html">Listings</a>	<a href="market-report.html">Market Report</a>	<a href="contact.html">Contact</a>
 		<a href="http://hud.gov" target="_blank">Housing and Urban Development </a>
+		<h3>Contact</h3>
+		<!-- Map-->
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48402.65859638656!2d-73.9873419936738!3d40.69233799186281!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a4b934481c7%3A0x4f37e8720aab325!2sJay+St+-+MetroTech+Station!5e0!3m2!1sen!2sus!4v1498830925213" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+		<!-- Contact form-->
 	</body>
 </html>
